auth, user, segregate db from events, mapstruct usage
